# AI_Challenge_2026

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: API_CONTRACT.md  ARCHITECTURE.md  ARCHITECTURE_VI.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md
scripts/: fetch_transnetv2_weights.sh  verify_index.py
src/: data_loader.py  eval.py  inference.py  model.py  train.py
src/agents/: __init__.py  asr_agent.py  base_agent.py  beit3_agent.py  ocr_agent.py  orchestrator.py  visual_agent.py
src/retrieval/: __init__.py  es_store.py  shot_detector.py  vector_store.py  video_indexer.py
src/routing/: __init__.py  classifier.py  dispatcher.py
src/ui/: app.py
