[project]
name = "aic2026"
version = "0.1.0"
description = "AI Challenge 2026 Agentic Architecture"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "elasticsearch",
    "turbovec",
    "openai",
    "google-genai",
    "transnetv2 @ git+https://github.com/soCzech/TransNetV2.git",
    "tensorflow",
    "opencv-python",
    "ffmpeg-python",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "open_clip_torch",
    "Pillow",
    "numpy",
    "pandas"
]
